...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_spinner"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_room_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/bt_room_filter"
...
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:focusable="false"
        android:hint="Choisir une date "
        android:inputType="none"
        android:textSize="@dimen/size_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/bt_date_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle2" />

    <Button
        android:id="@+id/bt_date_filter"
...
